# aegis

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.ci/: check-no-secret-files.sh
.github/workflows/: secret-file-guard.yml
backend/app/env/: __init__.py  cyber_defense_env.py  detection_model.py  network_state.py  registry.py  reward.py  topology_generator.py  vulnerability_catalog.py
backend/app/explainability/: rationale.py
backend/app/replay/: __init__.py  run_manager.py
backend/app/rl/: __init__.py  autopilot.py  config.py  eval.py  train.py
docker/: Dockerfile.train
docker/scripts/: entrypoint_train_eval.sh
frontend/: README.md  package.json
frontend/scripts/: export_episode_replay.ts  generate_scenario_replay.ts
frontend/src/app/: page.tsx
frontend/src/lib/: integrationContract.test.ts  replayAdapter.test.ts  replayAdapter.ts  scenarioReplay.ts  scenarios.ts
model/: .gitignore  Makefile  README.md
model/backend/app/: main.py
model/docker/scripts/: entrypoint_train_eval.sh
model/ops/scripts/: build_episode_runs.py  eval_all_runs.sh
model/runs/ep001/: checksums.sha256  manifest.json
model/runs/ep002/: checksums.sha256  manifest.json
model/tests/: test_autopilot_stats.py  test_eval_checkpoint_restore.py  test_main_replay_discovery.py  test_train_metrics.py
ops/scripts/: validate_replay.py
ops/sweeps/: fast_recovery_v1.json
tests/: test_autopilot_stats.py  test_config_overrides.py  test_env_contract.py  test_eval_checkpoint_restore.py  test_replay_validator.py  test_reward_safety.py  test_run_manager.py
(+86 files in other folders)
