[project]
name = "shield"
version = "0.1.0"
description = "AEGIS PPO blue-team cyber defense pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "gymnasium>=0.29",
  "networkx>=3.2",
  "pydantic>=2.7",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
train = [
  "torch==2.5.1",
  "ray[rllib]>=2.20",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.hatch.build.targets.wheel]
packages = ["backend"]
